deploy: 358f6681ff0bf3241f35e474995140365694b6a9

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,8 +1,7 @@
-<!doctype html><html><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><title>Projects - Dustan Kasten</title><meta name=description content=" Directory of Custom React Renderers React Hardware Tiny React Renderer Yellowbox React CSS SmoothScroll polyfill "><meta name=author content><link href=https://unpkg.com/@master/normal.css rel=stylesheet><script src=https://unpkg.com/@master/style@1.5.0></script>
-<script src=https://unpkg.com/@master/styles@1.13.0></script>
-<script src=https://unpkg.com/master-styles-group></script>
-<script src=https://unpkg.com/themes.js></script>
-<script>window.themes=window.themes||new window.Themes</script></head><body class="bg:fade-84@dark font:fade-16@dark"><nav class="w:full h:90 fixed bg:fade-84/.95@dark bg:white z:1000"><div class="h:full
+<!doctype html><html><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><title>Projects - Dustan Kasten</title>
+<meta name=description content="Music
+If You Were a Tree EP Open Source
+React Hardware Tiny React Renderer CSS SmoothScroll polyfill "><meta name=author content><link href=https://unpkg.com/@master/normal.css rel=stylesheet><script src=https://unpkg.com/@master/style@1.5.0></script><script src=https://unpkg.com/@master/styles@1.13.0></script><script src=https://unpkg.com/master-styles-group></script><script src=https://unpkg.com/themes.js></script><script>window.themes=window.themes||new window.Themes</script><script async src="https://www.googletagmanager.com/gtag/js?id=G-10JXB07ZP3"></script><script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag("js",new Date),gtag("config","G-10JXB07ZP3")</script></head><body class="bg:fade-84@dark font:fade-16@dark"><nav class="w:full h:90 fixed bg:fade-84/.95@dark bg:white z:1000"><div class="h:full
 w:full
 max-w:1200
 mx:auto
@@ -59,4 +58,4 @@ _:where(th,p_code,li_code,a,mark){font:semibold;_font:medium@dark}
 _:where(ul){list-style-type:disc}
 _:where(ul,ol,blockquote){pl:1.5em}
 _:where(video,img){max-width:full}
-_:where(a,mark){text-underline-offset:3}"><ul><li><a href=/react-renderers/>Directory of Custom React Renderers</a></li><li><a href=http://iamdustan.com/react-hardware>React Hardware</a></li><li><a href=https://github.com/iamdustan/tiny-react-renderer>Tiny React Renderer</a></li><li><a href=https://github.com/iamdustan/yellowbox-react>Yellowbox React</a></li><li><a href=http://iamdustan.com/smoothscroll/>CSS SmoothScroll polyfill</a></li></ul></div></article><footer class=py:24><div class="f:fade-30 f:14 mb:8"></div><div class="f:fade-60 f:12">Theme forked from <a class=f:bold href=https://github.com/serkodev/holy _target=_blank>Holy</a></div></footer></div></div></body></html>
+_:where(a,mark){text-underline-offset:3}"><p><strong>Music</strong></p><ul><li><a href=/if-you-were-a-tree/>If You Were a Tree EP</a></li></ul><p><strong>Open Source</strong></p><ul><li><a href=http://iamdustan.com/react-hardware>React Hardware</a></li><li><a href=https://github.com/iamdustan/tiny-react-renderer>Tiny React Renderer</a></li><li><a href=http://iamdustan.com/smoothscroll/>CSS SmoothScroll polyfill</a></li></ul></div></article><footer class=py:24><div class="f:fade-30 f:14 mb:8"></div></footer></div></div></body></html>
